--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -2,7 +2,7 @@
   <app-control class="control" label="Title">
     <input name="title" id="title" />
   </app-control>
-  <app-control class="control" label="Request">
+  <app-control label="Request">
     <textarea name="reqest" id="reqest" rows="3"></textarea>
   </app-control>
   <p>
