--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,4 +1,4 @@
-<form>
+<form (ngSubmit)="onSubmit()">
   <app-control class="control" label="Title">
     <input name="title" id="title" />
   </app-control>
