--- a/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
+++ b/src/app/dashboard/tickets/new-ticket/new-ticket.component.html
@@ -1,6 +1,6 @@
-<form (ngSubmit)="onSubmit()">
+<form (ngSubmit)="onSubmit(titleInput)">
   <app-control class="control" label="Title">
-    <input name="title" id="title" />
+    <input name="title" id="title" #titleInput />
   </app-control>
   <app-control label="Request">
     <textarea name="reqest" id="reqest" rows="3"></textarea>
